feat: register_event_identity endpoint and add swagger docs
